--- a/UE/S1/IPI/projet/Makefile
+++ b/UE/S1/IPI/projet/Makefile
@@ -1,22 +1,25 @@
 SRC=./code/exo1.c ./code/exo2.c ./code/exo3.c ./rapport/rapport.pdf
 LOCAL_SRC=$(notdir $(SRC))
-DST=./build/pereira-romain.tar.gz
 
 all: test build clean
 
 test:
 	cd ./code ; ./exec1.sh -q ; ./exec2.sh -q ; ./exec3.sh -q
 
-build:
-	cp $(SRC) .
-	tar -cvzf $(DST) $(LOCAL_SRC)
+build: clean
+	mkdir -p ./build
+	mkdir -p ./build/customlibs
+	cp ./rapport/rapport.pdf ./code/*.c -r ./code/customlibs/ ./build/
+	cd ./build ; tar -cvzf pereira-romain.tar.gz ./*
 
 extract:
-	tar -xvzf $(DST)
+	mkdir -p extracted
+	cd extracted ; tar -xvzf ../build/pereira-romain.tar.gz
 
 clean:
-	rm -rf $(LOCAL_SRC) 
-	rm -rf ./code/exo1 ./code/exo2 ./code/exo3
+	rm -rf $(LOCAL_SRC)
+	make -C ./code clean
 
 fclean: clean
-	rm -rf $(DST)
+	rm -rf ./build
+	rm -rf ./extracted
