resetting default test files + bitmap instead of 'visited' attributes in 't_node'

--- a/UE/S1/IPI/projet/code/Makefile
+++ b/UE/S1/IPI/projet/code/Makefile
@@ -5,11 +5,12 @@
  
 CUSTOMSRC = $(wildcard customlibs/*.c)
 CUSTOMOBJ = $(patsubst %c,%o,$(CUSTOMSRC))
-CC = gcc -Wall -Wextra -ansi -std=c99 -lm -g
+CC = gcc -Wall -Wextra -ansi -std=c99 -lm
 
 EXO = exo1 exo2 exo3
 
 all: $(EXO)
+
 
 $(EXO) : % : %.o $(CUSTOMOBJ)
 	$(CC) -o $@ $^
