optimizing algorithms, and implemented a*

--- a/UE/S1/IPI/projet/code/Makefile
+++ b/UE/S1/IPI/projet/code/Makefile
@@ -5,7 +5,7 @@
  
 CUSTOMSRC = $(wildcard customlibs/*.c)
 CUSTOMOBJ = $(patsubst %c,%o,$(CUSTOMSRC))
-CC = gcc -Wall -Wextra -ansi -std=c99 -lm -g
+CC = gcc -Wall -Wextra -ansi -std=c99 -lm
 
 EXO = exo1 exo2 exo3
 
