--- a/UE/S2/IPF/projet/Makefile
+++ b/UE/S2/IPF/projet/Makefile
@@ -5,7 +5,8 @@ all: build
 build: clean
 	mkdir .tmp ; make -C code fclean ; cp -r code .tmp ;\
 		cp rapport/rapport.pdf .tmp ; cp README .tmp;\
-		cd .tmp ; tar -cvzf ../$(TARBALL) code rapport.pdf README
+		cp out.csv .tmp ; cd .tmp ; \
+		tar -cvzf ../$(TARBALL) code rapport.pdf README out.csv
 	rm -rf .tmp
 extract:
 	mkdir -p extracted ; tar -xvzf $(TARBALL) -C extracted
