--- a/UE/S3/microarchi/bus_ia/bus_ia.qsf
+++ b/UE/S3/microarchi/bus_ia/bus_ia.qsf
@@ -48,13 +48,6 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name VHDL_FILE initiateur.vhd
-set_global_assignment -name VHDL_FILE terminateurSplit.vhd
-set_global_assignment -name VHDL_FILE rs232in.vhd
-set_global_assignment -name VHDL_FILE plus12.vhd
-set_global_assignment -name VHDL_FILE terminateur.vhd
-set_global_assignment -name VHDL_FILE rs232out.vhd
-set_global_assignment -name BDF_FILE bus_ia.bdf
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
@@ -64,4 +57,12 @@ set_location_assignment PIN_G26 -to reset
 set_location_assignment PIN_B25 -to tx
 set_location_assignment PIN_Y12 -to diode
 set_location_assignment PIN_C25 -to rx
+set_global_assignment -name VHDL_FILE gentick.vhd
+set_global_assignment -name VHDL_FILE terminateur.vhd
+set_global_assignment -name VHDL_FILE initiateur.vhd
+set_global_assignment -name VHDL_FILE terminateurSplit.vhd
+set_global_assignment -name VHDL_FILE rs232in.vhd
+set_global_assignment -name VHDL_FILE plus12.vhd
+set_global_assignment -name VHDL_FILE rs232out.vhd
+set_global_assignment -name BDF_FILE bus_ia.bdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
