--- a/UE/S3/microarchi/bus_ia/bus_ia.qsf
+++ b/UE/S3/microarchi/bus_ia/bus_ia.qsf
@@ -57,6 +57,7 @@ set_location_assignment PIN_G26 -to reset
 set_location_assignment PIN_B25 -to tx
 set_location_assignment PIN_Y12 -to diode
 set_location_assignment PIN_C25 -to rx
+set_global_assignment -name VHDL_FILE h10.vhd
 set_global_assignment -name VHDL_FILE gentick.vhd
 set_global_assignment -name VHDL_FILE terminateur.vhd
 set_global_assignment -name VHDL_FILE initiateur.vhd
@@ -65,4 +66,6 @@ set_global_assignment -name VHDL_FILE rs232in.vhd
 set_global_assignment -name VHDL_FILE plus12.vhd
 set_global_assignment -name VHDL_FILE rs232out.vhd
 set_global_assignment -name BDF_FILE bus_ia.bdf
+set_global_assignment -name VHDL_FILE h100.vhd
+set_location_assignment PIN_AE22 -to diodeh10
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
