--- a/UE/S3/microarchi/bus_ia/bus_ia.qsf
+++ b/UE/S3/microarchi/bus_ia/bus_ia.qsf
@@ -76,4 +76,10 @@ set_location_assignment PIN_AD11 -to pin_name4
 set_location_assignment PIN_AC12 -to pin_name5
 set_location_assignment PIN_AB12 -to pin_name6
 set_location_assignment PIN_AF10 -to pin_name7
+set_location_assignment PIN_AE23 -to dvdf0
+set_location_assignment PIN_AF23 -to dvdf1
+set_location_assignment PIN_AB21 -to dvdf2
+set_location_assignment PIN_N25 -to ivdf0
+set_location_assignment PIN_N26 -to ivdf1
+set_location_assignment PIN_P25 -to ivdf2
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
