--- a/UE/S3/microarchi/bus_ia/bus_ia.qsf
+++ b/UE/S3/microarchi/bus_ia/bus_ia.qsf
@@ -58,17 +58,6 @@ set_location_assignment PIN_B25 -to tx
 set_location_assignment PIN_Y12 -to diode
 set_location_assignment PIN_C25 -to rx
 set_location_assignment PIN_AE22 -to diodeh10
-set_global_assignment -name VHDL_FILE sept.vhd
-set_global_assignment -name VHDL_FILE h10.vhd
-set_global_assignment -name VHDL_FILE gentick.vhd
-set_global_assignment -name VHDL_FILE terminateur.vhd
-set_global_assignment -name VHDL_FILE initiateur.vhd
-set_global_assignment -name VHDL_FILE terminateurSplit.vhd
-set_global_assignment -name VHDL_FILE rs232in.vhd
-set_global_assignment -name VHDL_FILE plus12.vhd
-set_global_assignment -name VHDL_FILE rs232out.vhd
-set_global_assignment -name BDF_FILE bus_ia.bdf
-set_global_assignment -name VHDL_FILE h100.vhd
 set_location_assignment PIN_V13 -to pin_name1
 set_location_assignment PIN_V14 -to pin_name2
 set_location_assignment PIN_AE11 -to pin_name3
@@ -82,4 +71,18 @@ set_location_assignment PIN_AB21 -to dvdf2
 set_location_assignment PIN_N25 -to ivdf0
 set_location_assignment PIN_N26 -to ivdf1
 set_location_assignment PIN_P25 -to ivdf2
+set_location_assignment PIN_AC22 -to dvdf
+set_global_assignment -name VHDL_FILE serpentin.vhd
+set_global_assignment -name VHDL_FILE hprog.vhd
+set_global_assignment -name VHDL_FILE h100.vhd
+set_global_assignment -name VHDL_FILE sept.vhd
+set_global_assignment -name VHDL_FILE h10.vhd
+set_global_assignment -name VHDL_FILE gentick.vhd
+set_global_assignment -name VHDL_FILE terminateur.vhd
+set_global_assignment -name VHDL_FILE initiateur.vhd
+set_global_assignment -name VHDL_FILE terminateurSplit.vhd
+set_global_assignment -name VHDL_FILE rs232in.vhd
+set_global_assignment -name VHDL_FILE plus12.vhd
+set_global_assignment -name VHDL_FILE rs232out.vhd
+set_global_assignment -name BDF_FILE bus_ia.bdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
