--- a/UE/S3/microarchi/bus_ia/bus_ia.qsf
+++ b/UE/S3/microarchi/bus_ia/bus_ia.qsf
@@ -58,13 +58,6 @@ set_location_assignment PIN_B25 -to tx
 set_location_assignment PIN_Y12 -to diode
 set_location_assignment PIN_C25 -to rx
 set_location_assignment PIN_AE22 -to diodeh10
-set_location_assignment PIN_V13 -to pin_name1
-set_location_assignment PIN_V14 -to pin_name2
-set_location_assignment PIN_AE11 -to pin_name3
-set_location_assignment PIN_AD11 -to pin_name4
-set_location_assignment PIN_AC12 -to pin_name5
-set_location_assignment PIN_AB12 -to pin_name6
-set_location_assignment PIN_AF10 -to pin_name7
 set_location_assignment PIN_AE23 -to dvdf0
 set_location_assignment PIN_AF23 -to dvdf1
 set_location_assignment PIN_AB21 -to dvdf2
@@ -72,6 +65,7 @@ set_location_assignment PIN_N25 -to ivdf0
 set_location_assignment PIN_N26 -to ivdf1
 set_location_assignment PIN_P25 -to ivdf2
 set_location_assignment PIN_AC22 -to dvdf
+set_global_assignment -name VHDL_FILE serpentinprog.vhd
 set_global_assignment -name VHDL_FILE serpentinclignonant.vhd
 set_global_assignment -name VHDL_FILE moduler.vhd
 set_global_assignment -name VHDL_FILE wrapper.vhd
@@ -84,4 +78,11 @@ set_global_assignment -name VHDL_FILE rs232in.vhd
 set_global_assignment -name VHDL_FILE plus12.vhd
 set_global_assignment -name VHDL_FILE rs232out.vhd
 set_global_assignment -name BDF_FILE bus_ia.bdf
+set_location_assignment PIN_V13 -to ss0
+set_location_assignment PIN_V14 -to ss1
+set_location_assignment PIN_AE11 -to ss2
+set_location_assignment PIN_AD11 -to ss3
+set_location_assignment PIN_AC12 -to ss4
+set_location_assignment PIN_AB12 -to ss5
+set_location_assignment PIN_AF10 -to ss6
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
