--- a/UE/S3/microarchi/bus_ia/bus_ia.qsf
+++ b/UE/S3/microarchi/bus_ia/bus_ia.qsf
@@ -81,6 +81,8 @@ set_location_assignment PIN_AA23 -to SSDEBUG[1]
 set_location_assignment PIN_AB24 -to SSDEBUG[0]
 set_location_assignment PIN_V1 -to SEL1
 set_location_assignment PIN_V2 -to SEL2
+set_global_assignment -name VHDL_FILE wrapper_hinit.vhd
+set_global_assignment -name VHDL_FILE wrapper_ss.vhd
 set_global_assignment -name VHDL_FILE tickswitch.vhd
 set_global_assignment -name VHDL_FILE serpentinmux.vhd
 set_global_assignment -name VHDL_FILE serpentinantihoraire.vhd
@@ -89,7 +91,6 @@ set_global_assignment -name VHDL_FILE serpentinhoraire.vhd
 set_global_assignment -name VHDL_FILE serpentinprog.vhd
 set_global_assignment -name VHDL_FILE serpentinclignonant.vhd
 set_global_assignment -name VHDL_FILE moduler.vhd
-set_global_assignment -name VHDL_FILE wrapper.vhd
 set_global_assignment -name VHDL_FILE h100.vhd
 set_global_assignment -name VHDL_FILE h10.vhd
 set_global_assignment -name VHDL_FILE terminateur.vhd
